objects/smlfcom__SML_Forecast_Detail_Data__mdt.object
<CustomObject>
    <fields>
        <fullName>smlfcom__Chart_Type__c</fullName>
        <label>Chart Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forecast_Details</fullName>
                    <default>true</default>
                    <label>Forecast_Details</label>
                </value>
                <value>
                    <fullName>Quarterly_Summary</fullName>
                </value>
                <value>
                    <fullName>Duration</fullName>
                </value>
                <value>
                    <fullName>Pipe_Coverage</fullName>
                </value>
                <value>
                    <fullName>Standard Waterfall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Field_API_Name_Text__c</fullName>
        <label>Field API Name Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Metric__c</fullName>
                    <default>true</default>
                    <label>Metric__c</label>
                </value>
                <value>
                    <fullName>Metric2__c</fullName>
                </value>
                <value>
                    <fullName>Metric_3__c</fullName>
                </value>
                <value>
                    <fullName>Metric_4__c</fullName>
                </value>
                <value>
                    <fullName>Metric_5__c</fullName>
                </value>
                <value>
                    <fullName>Dimension6__c</fullName>
                </value>
                <value>
                    <fullName>Dimension7__c</fullName>
                </value>
                <value>
                    <fullName>Record_Name__c</fullName>
                </value>
                <value>
                    <fullName>Dimension1__c</fullName>
                </value>
                <value>
                    <fullName>Dimension2__c</fullName>
                </value>
                <value>
                    <fullName>Dimension3__c</fullName>
                </value>
                <value>
                    <fullName>Opportunity__r.Type</fullName>
                </value>
                <value>
                    <fullName>Opportunity__r.StageName</fullName>
                </value>
                <value>
                    <fullName>Opportunity__r.ForecastCategoryName</fullName>
                </value>
                <value>
                    <fullName>Dimension5__c</fullName>
                </value>
                <value>
                    <fullName>Opportunity__r.owner.name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Is_Percent_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Percent Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KPI Box</fullName>
                    <default>true</default>
                    <label>KPI Box</label>
                </value>
                <value>
                    <fullName>Chart</fullName>
                </value>
                <value>
                    <fullName>Compare Table</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__order__c</fullName>
        <label>order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SML Forecast Detail Data</label>
    <pluralLabel>SML Forecast Detail Data</pluralLabel>
</CustomObject>